--- a/config/blackbox.yml
+++ b/config/blackbox.yml
@@ -3,8 +3,10 @@ modules:
     prober: http
     timeout: 5s
     http:
-      valid_http_versions: [ "HTTP/1.1", "HTTP/2" ]
-      valid_status_codes: [ 200 ]
+      valid_http_versions: ["HTTP/1.1", "HTTP/2", "HTTP/2.0"]
+      fail_if_ssl: false
+      fail_if_not_ssl: false
+      preferred_ip_protocol: "ipv4"
 
   tcp_connect:
     prober: tcp
