--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
     image: prom/prometheus:v2.50.1
     restart: unless-stopped
     ports:
-      - '9090:9090'
+      - '9091:9090'
     volumes:
       - ./config/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./data/prometheus:/prometheus
 
   blackbox:
     image: prom/blackbox-exporter:v0.24.0
